# api/src/main/java/fullstack/api/presentation/UserController.java
@@ -1,5 +1,6 @@
 package fullstack.api.presentation;
 
+import fullstack.api.config.Cookies;
 import fullstack.api.domain.LoginResponse;
 import fullstack.api.exception.ApplicationException;
 import fullstack.api.openapi.api.UserApi;
@@ -8,17 +9,17 @@ import fullstack.api.openapi.model.LoginResponseDto;
 import fullstack.api.presentation.mapper.LoginRequestMapper;
 import fullstack.api.presentation.mapper.LoginResponseMapper;
 import fullstack.api.service.UserService;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import java.util.Arrays;
 import org.mapstruct.factory.Mappers;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class UserController implements UserApi {
-
-  private static final Logger LOGGER = LoggerFactory.getLogger(UserController.class);
 
   private final LoginRequestMapper requestMapper = Mappers.getMapper(LoginRequestMapper.class);
 
@@ -38,10 +39,27 @@ public class UserController implements UserApi {
     return ResponseEntity.ok(responseMapper.toDto(loginResponse));
   }
 
+  @GetMapping("/auth/callback")
+  public ResponseEntity<LoginResponseDto> githubCallback(HttpServletRequest request)
+      throws ApplicationException {
+    String token =
+        Arrays.stream(request.getCookies())
+            .filter(t -> t.getName().equals(Cookies.TOKEN_COOKIE_NAME))
+            .findFirst()
+            .map(Cookie::getValue)
+            .orElse("");
+    LoginResponse loginResponse = userService.login(token);
+    return ResponseEntity.ok(responseMapper.toDto(loginResponse));
+  }
+
   @PreAuthorize("hasAuthority('ROLE_ADMIN')")
-  @Override
-  public ResponseEntity<Void> test() {
-    LOGGER.info("test");
-    return ResponseEntity.ok().build();
+  @GetMapping("/test")
+  public ResponseEntity<String> test() {
+    return ResponseEntity.ok("Hello This is a test!");
+  }
+
+  @GetMapping("/demo")
+  public ResponseEntity<String> demo() {
+    return ResponseEntity.ok("Hello World!");
   }
 }
