# api/src/main/resources/openapi/api.yaml
@@ -27,26 +27,6 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
-  "/test":
-    get:
-      summary: "Test Api"
-      description: "Test Api"
-      operationId: "test"
-      tags:
-        - "user"
-      responses:
-        "200":
-          description: OK
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-        "403":
-          $ref: "#/components/responses/Forbidden"
-        "404":
-          $ref: "#/components/responses/NotFound"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
 
 components:
   schemas:
